// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomType transform Explicit CustomType - required 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  location: Location!
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType - with auth 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  location: Location @auth(rules: [{allow: owner, ownerField: "owner"}])
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  location: Location
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType authorized by both group and authorized though different custom operations 1`] = `
"type testCustomType @aws_cognito_user_pools
{
  content: String
}

type Query {
  getPostDetailsA: testCustomType @function(name: "FnGetPostDetailsA") @auth(rules: [{allow: private}])
  getPostDetailsB: testCustomType @function(name: "FnGetPostDetailsB") @auth(rules: [{allow: groups, groups: ["TestGroup"]}])
}"
`;

exports[`CustomType transform Explicit CustomType nests explicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: Meta
}

enum PostStatus {
  unpublished
  published
}

type Meta 
{
  status: PostStatus
  nestedMeta: AltMeta
}

type AltMeta 
{
  field1: String
}"
`;

exports[`CustomType transform Explicit CustomType nests explicit enum 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: Meta
}

enum PostStatus {
  unpublished
  published
}

type Meta 
{
  status: PostStatus
  publishedDate: AWSDate
}"
`;

exports[`CustomType transform Explicit CustomType nests implicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: Meta
}

type Meta 
{
  status: MetaStatus
  nestedMeta: MetaNestedMeta
}

enum MetaStatus {
  unpublished
  published
}

type MetaNestedMeta 
{
  field1: String
}"
`;

exports[`CustomType transform Explicit CustomType nests implicit enum type 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: Meta
}

type Meta 
{
  status: MetaStatus
  publishedDate: AWSDate
}

enum MetaStatus {
  unpublished
  published
}"
`;

exports[`CustomType transform Implicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  location: PostLocation
}

type PostLocation 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Implicit CustomType authorized by both group and authorized though its custom operation 1`] = `
"type GetPostDetailsAReturnType @aws_cognito_user_pools
{
  
}

input GetPostDetailsAContentInput {
  content: String
}

type Query {
  getPostDetailsA(content: GetPostDetailsAContentInput): GetPostDetailsAReturnType @function(name: "FnGetPostDetailsA") @auth(rules: [{allow: private},
  {allow: groups, groups: ["TestGroup"]}])
}"
`;

exports[`CustomType transform Implicit CustomType nests explicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: PostMeta
}

type AltMeta 
{
  field1: String
}

type PostMeta 
{
  status: PostMetaStatus
  nestedMeta: AltMeta
}

enum PostMetaStatus {
  unpublished
  published
}"
`;

exports[`CustomType transform Implicit CustomType nests explicit enum 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: PostMeta
}

enum PostStatus {
  unpublished
  published
}

type PostMeta 
{
  status: PostStatus
  publishedDate: AWSDate
}"
`;

exports[`CustomType transform Implicit CustomType nests implicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: PostMeta
}

type PostMeta 
{
  status: PostMetaStatus
  nestedMeta: PostMetaNestedMeta
}

enum PostMetaStatus {
  unpublished
  published
}

type PostMetaNestedMeta 
{
  field1: String
}"
`;

exports[`CustomType transform Implicit CustomType nests implicit enum type 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: PostMeta
}

type PostMeta 
{
  status: PostMetaStatus
  publishedDate: AWSDate
}

enum PostMetaStatus {
  unpublished
  published
}"
`;
